@@ -29,6 +29,9 @@ Extension Modules
 Library
 -------
 
+- Issue #2058: Remove the buf attribute and add __slots__ to the TarInfo
+  class in order to reduce tarfile's memory usage.
+
 - Bug #2606: Avoid calling .sort() on a dict_keys object.
 
 - The bundled libffi copy is now in sync with the recently released
